--- a/Notebook/anlaysis_model_creation.ipynb
+++ b/Notebook/anlaysis_model_creation.ipynb
@@ -33,36 +33,341 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "f4a8659c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 54808 entries, 0 to 54807\n",
-      "Data columns (total 14 columns):\n",
-      " #   Column                Non-Null Count  Dtype  \n",
-      "---  ------                --------------  -----  \n",
-      " 0   employee_id           54808 non-null  int64  \n",
-      " 1   department            54808 non-null  object \n",
-      " 2   region                54808 non-null  object \n",
-      " 3   education             52399 non-null  object \n",
-      " 4   gender                54808 non-null  object \n",
-      " 5   recruitment_channel   54808 non-null  object \n",
-      " 6   no_of_trainings       54808 non-null  int64  \n",
-      " 7   age                   54808 non-null  int64  \n",
-      " 8   previous_year_rating  50684 non-null  float64\n",
-      " 9   length_of_service     54808 non-null  int64  \n",
-      " 10  KPIs_met >80%         54808 non-null  int64  \n",
-      " 11  awards_won?           54808 non-null  int64  \n",
-      " 12  avg_training_score    54808 non-null  int64  \n",
-      " 13  is_promoted           54808 non-null  int64  \n",
-      "dtypes: float64(1), int64(8), object(5)\n",
-      "memory usage: 5.9+ MB\n"
-     ]
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "employee_id",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "department",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "region",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "education",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "gender",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "recruitment_channel",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "no_of_trainings",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "age",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "previous_year_rating",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "length_of_service",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "KPIs_met >80%",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "awards_won?",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "avg_training_score",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "is_promoted",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "3fd25dff-c78c-4835-9adc-316205bdfd1f",
+       "rows": [
+        [
+         "0",
+         "65438",
+         "Sales & Marketing",
+         "region_7",
+         "Master's & above",
+         "f",
+         "sourcing",
+         "1",
+         "35",
+         "5.0",
+         "8",
+         "1",
+         "0",
+         "49",
+         "0"
+        ],
+        [
+         "1",
+         "65141",
+         "Operations",
+         "region_22",
+         "Bachelor's",
+         "m",
+         "other",
+         "1",
+         "30",
+         "5.0",
+         "4",
+         "0",
+         "0",
+         "60",
+         "0"
+        ],
+        [
+         "2",
+         "7513",
+         "Sales & Marketing",
+         "region_19",
+         "Bachelor's",
+         "m",
+         "sourcing",
+         "1",
+         "34",
+         "3.0",
+         "7",
+         "0",
+         "0",
+         "50",
+         "0"
+        ],
+        [
+         "3",
+         "2542",
+         "Sales & Marketing",
+         "region_23",
+         "Bachelor's",
+         "m",
+         "other",
+         "2",
+         "39",
+         "1.0",
+         "10",
+         "0",
+         "0",
+         "50",
+         "0"
+        ],
+        [
+         "4",
+         "48945",
+         "Technology",
+         "region_26",
+         "Bachelor's",
+         "m",
+         "other",
+         "1",
+         "45",
+         "3.0",
+         "2",
+         "0",
+         "0",
+         "73",
+         "0"
+        ]
+       ],
+       "shape": {
+        "columns": 14,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>employee_id</th>\n",
+       "      <th>department</th>\n",
+       "      <th>region</th>\n",
+       "      <th>education</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>recruitment_channel</th>\n",
+       "      <th>no_of_trainings</th>\n",
+       "      <th>age</th>\n",
+       "      <th>previous_year_rating</th>\n",
+       "      <th>length_of_service</th>\n",
+       "      <th>KPIs_met &gt;80%</th>\n",
+       "      <th>awards_won?</th>\n",
+       "      <th>avg_training_score</th>\n",
+       "      <th>is_promoted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>65438</td>\n",
+       "      <td>Sales &amp; Marketing</td>\n",
+       "      <td>region_7</td>\n",
+       "      <td>Master's &amp; above</td>\n",
+       "      <td>f</td>\n",
+       "      <td>sourcing</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>49</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>65141</td>\n",
+       "      <td>Operations</td>\n",
+       "      <td>region_22</td>\n",
+       "      <td>Bachelor's</td>\n",
+       "      <td>m</td>\n",
+       "      <td>other</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7513</td>\n",
+       "      <td>Sales &amp; Marketing</td>\n",
+       "      <td>region_19</td>\n",
+       "      <td>Bachelor's</td>\n",
+       "      <td>m</td>\n",
+       "      <td>sourcing</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2542</td>\n",
+       "      <td>Sales &amp; Marketing</td>\n",
+       "      <td>region_23</td>\n",
+       "      <td>Bachelor's</td>\n",
+       "      <td>m</td>\n",
+       "      <td>other</td>\n",
+       "      <td>2</td>\n",
+       "      <td>39</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>48945</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>region_26</td>\n",
+       "      <td>Bachelor's</td>\n",
+       "      <td>m</td>\n",
+       "      <td>other</td>\n",
+       "      <td>1</td>\n",
+       "      <td>45</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>73</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   employee_id         department     region         education gender  \\\n",
+       "0        65438  Sales & Marketing   region_7  Master's & above      f   \n",
+       "1        65141         Operations  region_22        Bachelor's      m   \n",
+       "2         7513  Sales & Marketing  region_19        Bachelor's      m   \n",
+       "3         2542  Sales & Marketing  region_23        Bachelor's      m   \n",
+       "4        48945         Technology  region_26        Bachelor's      m   \n",
+       "\n",
+       "  recruitment_channel  no_of_trainings  age  previous_year_rating  \\\n",
+       "0            sourcing                1   35                   5.0   \n",
+       "1               other                1   30                   5.0   \n",
+       "2            sourcing                1   34                   3.0   \n",
+       "3               other                2   39                   1.0   \n",
+       "4               other                1   45                   3.0   \n",
+       "\n",
+       "   length_of_service  KPIs_met >80%  awards_won?  avg_training_score  \\\n",
+       "0                  8              1            0                  49   \n",
+       "1                  4              0            0                  60   \n",
+       "2                  7              0            0                  50   \n",
+       "3                 10              0            0                  50   \n",
+       "4                  2              0            0                  73   \n",
+       "\n",
+       "   is_promoted  \n",
+       "0            0  \n",
+       "1            0  \n",
+       "2            0  \n",
+       "3            0  \n",
+       "4            0  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -71,7 +376,7 @@
     "test = pd.read_csv('../Data/test.csv')\n",
     "sample_submission = pd.read_csv('../Data/sample_submission.csv')\n",
     "\n",
-    "train.info()"
+    "train.head()"
    ]
   },
   {
